fix overlapping elements in multi-row gris

--- a/style.css
+++ b/style.css
@@ -235,7 +235,8 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .save-grid {
   width: 180px;
-  height: max(300px, 100%);
+  height: 100%;
+  min-height: 300px;
   margin: auto;
   display: flex;
   flex-direction: column;
